# div176

./: .gitignore  Cargo.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/android/: .gitignore  Cargo.toml  Dockerfile  compose.yml  tauri.conf.json
crates/android/src/frontend/: index.html
crates/components/: Cargo.toml
crates/components/src/: icons.rs  lib.rs
crates/db/: Cargo.toml
crates/db/.sqlx/: query-0209dda5e2b0327f0d8160c30cc5246c7ca8a20367c782c2a9cfb65074b38979.json  query-544602d9ce267c07a7a72808d39379b03e3877b16d7126a383e113032187cfdc.json  query-9c04e97b70bb43a14f850543f278ab3cb8db5560fb718dd5dbbf7cbbb48d14a5.json
crates/db/sql/: init.sql
crates/db/src/: lib.rs  users.rs
crates/db/src/script/: prepare.rs
crates/hypertext/: Cargo.toml
crates/hypertext/src/: lib.rs
crates/owntracks/: Cargo.toml
crates/owntracks/examples/: server.rs
crates/owntracks/src/: types.rs
crates/rsx/: Cargo.toml
crates/rsx/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: axum_otel.rs  lib.rs  tracing_otel.rs
crates/type_alias_macro/: Cargo.toml
crates/type_alias_macro/examples/: example.rs
crates/type_alias_macro/src/: lib.rs
crates/types/: Cargo.toml
crates/types/examples/: type_alias.rs
crates/types/src/: lib.rs  type_alias.rs
crates/unreachable_macro/: Cargo.toml
crates/unreachable_macro/src/: lib.rs
div176/: Cargo.toml  build.rs
div176/src/: auth.rs  home.rs  main.rs  static.rs
div176/tests/e2e/: common.rs  main.rs
