cargo-features = ["codegen-backend", "profile-rustflags"]

[workspace]
default-members = ["div176"]
members = ["crates/*", "div176"]
resolver = "2"

[workspace.package]
authors = ["MNThomson"]
edition = "2024"
license = "AGPLv3"
repository = "https://github.com/MNThomson/div176"
version = "0.0.0"

[workspace.dependencies]
anyhow = { version = "1.0.92" }
axum = { version = "0.7" }
pretty_assertions = "1.4.1"
tokio = { version = "1.41", features = ["full"] }
tower-http = { version = "0.6", features = ["catch-panic", "trace"] }
tracing = { version = "0.1", features = ["attributes"] }

[profile.release]
codegen-units = 1
lto = "fat"

[profile.dev-fast]
codegen-backend = "cranelift"
inherits = "dev"
rustflags = ["-C", "link-arg=-fuse-ld=mold"]
