cargo-features = ["codegen-backend", "profile-rustflags"]

[workspace]
default-members = ["div176"]
exclude = ["crates/android"]
members = ["crates/*", "div176"]
resolver = "2"

[workspace.package]
authors = ["MNThomson"]
edition = "2024"
license = "AGPLv3"
repository = "https://github.com/MNThomson/div176"
version = "0.0.0"

[workspace.dependencies]
anyhow = { version = "1.0.92" }
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = ["cookie"] }
chrono = { version = "0.4.40" }
pretty_assertions = "1.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.33" }
tokio = { version = "1.41", features = ["full"] }
tower-http = { version = "0.6", features = ["catch-panic", "trace"] }
tracing = { version = "0.1", features = ["attributes"] }

[profile.release]
codegen-units = 1
lto = "fat"

[profile.dev-fast]
codegen-backend = "cranelift"
inherits = "dev"
rustflags = ["-C", "link-arg=-fuse-ld=mold"]
