cargo-features = ["codegen-backend", "profile-rustflags"]

[workspace]
default-members = ["div176"]
exclude = ["crates/android"]
members = ["crates/*", "div176"]
resolver = "2"

[workspace.package]
authors = ["MNThomson"]
edition = "2024"
license = "AGPLv3"
repository = "https://github.com/MNThomson/div176"
version = "0.0.0"

[workspace.dependencies]
anyhow = { version = "1.0.92" }
axum = { version = "0.7" }
axum-extra = { features = ["cookie"], version = "0.9" }
chrono = { version = "0.4.40" }
pretty_assertions = "1.4.1"
serde = { features = ["derive"], version = "1" }
serde_json = { version = "1.0.33" }
sqlx = { features = ["chrono", "macros", "postgres", "runtime-tokio"], version = "0.8" }
thiserror = "2.0.16"
tokio = { features = ["full"], version = "1.41" }
tower-http = { features = ["catch-panic", "compression-full", "trace"], version = "0.6" }
tracing = { features = ["attributes"], version = "0.1" }

[profile.release]
codegen-units = 1
lto = "fat"

[profile.dev-fast]
codegen-backend = "cranelift"
debug = false # debug = "line-tables-only"
inherits = "dev"
rustflags = ["-C", "link-arg=-fuse-ld=mold"]
