[package]
name = "div176"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
components = { path = "../crates/components/" }
db = { path = "../crates/db/" }
hypertext = { path = "../crates/hypertext/" }
telemetry = { path = "../crates/telemetry/" }

axum.workspace = true
tokio.workspace = true
tower-http.workspace = true

rust-embed.version = "8.5.0"
mime_guess.version = "2.0.5"
