[package]
name = "div176"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
components = { path = "../crates/components/" }
db = { path = "../crates/db/" }
hypertext = { path = "../crates/hypertext/" }
telemetry = { path = "../crates/telemetry/" }

axum.workspace = true
axum-extra.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true

mime_guess.version = "2.0.5"
rust-embed.version = "8.5.0"

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true

fantoccini = "0.21.2"
