[package]
name = "android"

# Tauri doesn't allow workspace overrides
authors = ["MNThomson"]
edition = "2021"
license = "AGPLv3"
repository = "https://github.com/MNThomson/div176"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "android_lib"

[build-dependencies]
tauri-build = { features = [], version = "2" }

[dependencies]
tauri = { version = "2" }
