[package]
name = "db"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
sqlx = { version = "0.8", features = ["chrono", "macros", "runtime-tokio", "sqlite"] }

unreachable_macro = { path = "../unreachable_macro/" }
