[package]
name = "db"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
postgresql_embedded = { features = ["bundled", "tokio"], version = "0.18.5" }
sqlx = { features = ["chrono", "macros", "postgres", "runtime-tokio"], version = "0.8" }
unreachable_macro = { path = "../unreachable_macro/" }
