[package]
name = "telemetry"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
gethostname = "0.4"
http = "1.1"
rustc_version = "0.4"
tower-http = { version = "0.6", features = ["trace"] }

opentelemetry = { version = "0.21", features = ["metrics"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic", "metrics", "tls-roots"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tonic = "0.9"
tracing = { version = "0.1", features = ["attributes"] }
tracing-opentelemetry = { version = "0.22" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
